# rust-clean-architecture

./: .env  Cargo.toml
src/: errors.rs  errors.rs~  main.rs  open_api.rs
src/adapters/api/: mod.rs  mod.rs~
src/adapters/repository/: mod.rs
src/domain/: dto.rs  mod.rs  mod.rs~  response_helpers.rs  response_helpers.rs~
src/infrastructure/: mod.rs
src/use_case/: mod.rs  mod.rs~
