[package]
name = "cargo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15"
thiserror = "2.0.6"
async-trait = "0.1.83"

# Dependencies for Swagger
utoipa = { version = "^5.2.0" }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

# Dependencies for Validation
validator = "0.19.0"
validator_derive = "0.19.0"

# For logging (optional)
env_logger = "0.11.5"
log = "0.4"